--- a/templates/download_list.html
+++ b/templates/download_list.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>下載頁面</title>
+  <title>File List</title>
 </head>
 <body>
   <h1>可下載檔案列表</h1>
